--- a/coast.html
+++ b/coast.html
@@ -19,5 +19,11 @@
         </li>
       </ul>
     </nav>
+
+    <section>
+        <figure>
+            <img src="assets/images/beach.jpg" alt="an image of Dublin beach">
+        </figure>
+    </section>
   </body>
 </html>
